--- a/style.css
+++ b/style.css
@@ -189,11 +189,12 @@ input:checked+.slider:before {
 /* Match gallery image style for profile */
 .profile-photo {
     width: 1000px;
-    height: auto;
+    height: 1200px;
     border: 4px solid var(--image-border-color); /* Uses same CSS variable as other pages */
     border-radius: 8px;
     object-fit: cover;
-    background-color: var(--image-bg-color); /* Same background as gallery */
+    background-color: #212121;
+    /* background-color: var(--image-bg-color); /* Same background as gallery */
     box-shadow: var(--image-shadow); /* Same shadow if you have one */
 }
 
@@ -241,4 +242,15 @@ input:checked+.slider:before {
     .about-gallery img {
         width: 90%;
     }
+}
+
+
+footer {
+    text-align: center;
+    padding: 1rem;
+    font-size: 3rem;
+    color: var(--text);
+    opacity: 0.6;
+    margin-top: 3rem;
+    border-top: 1px solid var(--text);
 }
