--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@
 body {
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
-    font-size: clamp(1rem, 1.2vw, 1.2rem);
+    font-size: clamp(.8rem, 1.2vw, 1.2rem);
     margin: 0;
-    padding: 2rem;
+    padding: 4rem;
     background: var(--bg);
     color: var(--text);
     transition: background 0.3s, color 0.3s;
@@ -49,7 +49,7 @@ hr {
     height: 1px;
     background-color: var(--text);
     opacity: 0.1;
-    margin: 2rem 0;
+    margin: 1rem 0;
 }
 
 .gallery {
@@ -67,7 +67,7 @@ hr {
     max-width: 70%;
     width: auto; /* lets image stay natural size */
     height: auto;
-    max-height: 2400px;
+    max-height: 95vh; /* never taller than the visible screen */
     border: 1px solid rgba(255, 255, 255, 0.1);
     padding: 4px;
     background: var(--card-bg);
@@ -130,7 +130,7 @@ hr {
 }
 
 .profile-photo {
-    width: 100%;
+    width: 95%;
     max-width: 500px;
     height: auto;
     border: 4px solid var(--image-border-color);
@@ -156,7 +156,7 @@ hr {
 }
 
 .about-gallery img {
-    width: 100%;
+    width: 95%;
     max-width: 500px;
     height: auto;
     border: 4px solid var(--image-border-color);
@@ -183,7 +183,26 @@ hr {
 
     .gallery img {
         margin: 10px 0;
-        max-width: 90%;
+        max-width: 95%;
+    }
+    h1 {
+        margin-bottom: 0.5rem;
+    }
+
+    .hamburger {
+        display: flex;
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        gap: 1rem;
+        background: var(--bg);
+        padding: 1rem;
+    }
+
+    .nav-links.active {
+        display: flex;
     }
 }
 
@@ -201,29 +220,6 @@ hr {
     background: var(--text);
     margin: 4px 0;
     border-radius: 2px;
-}
-
-/* Show hamburger only on mobile */
-@media (max-width: 768px) {
-    h1 {
-        margin-bottom: 0.5rem;
-    }
-    
-    .hamburger {
-        display: flex;
-    }
-
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        gap: 1rem;
-        background: var(--bg);
-        padding: 1rem;
-    }
-
-    .nav-links.active {
-        display: flex;
-    }
 }
 
 
