--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     --text: #f1f1f1;
     --card-bg: #1e1e1e;
     --scroll-track: #333;
+
+    --image-border-color: #444;
+    --image-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 [data-theme='dark'] {
@@ -15,7 +18,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
-    font-size: clamp(.8rem, 1.2vw, 1.2rem);
+    font-size: clamp(.8rem, 1.2vw, 1.0rem);
     margin: 0;
     padding: 4rem;
     background: var(--bg);
@@ -38,7 +41,7 @@ body::-webkit-scrollbar {
 h1 {
     font-family: 'Raleway', sans-serif;
     font-weight: 100;
-    font-size: clamp(2.5rem, 6vw, 3.5rem);
+    font-size: clamp(2rem, 6vw, 3rem);
     text-align: center;
     margin-bottom: .5rem;
     margin-top: -3rem;
@@ -130,9 +133,10 @@ hr {
 }
 
 .profile-photo {
-    width: 95%;
-    max-width: 500px;
-    height: auto;
+    width: 500px;
+    max-width: 95vh;
+    height: 700px;
+    max-height: 95vh;
     border: 4px solid var(--image-border-color);
     border-radius: 8px;
     object-fit: cover;
@@ -141,7 +145,7 @@ hr {
 }
 
 .profile-text {
-    max-width: 1200px;
+    max-width: 500px;
     text-align: center;
     font-size: clamp(1rem, 2.5vw, 1.5rem);
     line-height: 1.5;
@@ -185,12 +189,23 @@ hr {
         margin: 10px 0;
         max-width: 95%;
     }
+
     h1 {
         margin-bottom: 0.5rem;
     }
 
     .hamburger {
         display: flex;
+        flex-direction: column;
+        cursor: pointer;
+    }
+
+    .hamburger span {
+        height: 3px;
+        width: 25px;
+        background: var(--text);
+        margin: 4px 0;
+        border-radius: 2px;
     }
 
     .nav-links {
@@ -207,22 +222,6 @@ hr {
 }
 
 
-/* Hamburger menu styles */
-.hamburger {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-}
-
-.hamburger span {
-    height: 3px;
-    width: 25px;
-    background: var(--text);
-    margin: 4px 0;
-    border-radius: 2px;
-}
-
-
 footer {
     text-align: center;
     padding: 1rem;
@@ -231,4 +230,15 @@ footer {
     opacity: 0.6;
     margin-top: 3rem;
     border-top: 1px solid var(--text);
+}
+
+a {
+    color: #3399ff;
+    /* a pleasant light blue */
+    text-decoration: underline;
+}
+
+a:hover {
+    color: #66b3ff;
+    /* slightly lighter on hover */
 }
