--- a/style.css
+++ b/style.css
@@ -198,10 +198,13 @@ hr {
         display: flex;
         flex-direction: column;
         cursor: pointer;
+        width: 40px;
+        height: 35px;
+        margin: .5rem 1rem 0 0;
     }
 
     .hamburger span {
-        height: 3px;
+        height: 4px;
         width: 25px;
         background: var(--text);
         margin: 4px 0;
@@ -221,6 +224,9 @@ hr {
     }
 }
 
+.hamburger {
+    display: none;
+}
 
 footer {
     text-align: center;
